# akinator

./: AkinatorDialog.cpp  AkinatorDialog.h  CAkinator.cpp  CAkinator.h  CMakeLists.txt  README.md  test_AkinatorDialog.cpp
